--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,11 @@
             android:label="@string/title_activity_profile"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RequestActivity" />
-        <activity android:name=".ContractActivity"></activity>
-        <activity android:name=".EditProfileActivity"></activity>
+        <activity android:name=".ContractActivity" />
+        <activity android:name=".EditProfileActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
