--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:12.0.1'
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'org.web3j:core:3.3.1-android'
 }
 
 apply plugin: 'com.google.gms.google-services'
